--- a/src/app/views/add-user-view/add-user-view.component.html
+++ b/src/app/views/add-user-view/add-user-view.component.html
@@ -1,1 +1,36 @@
-<p>add-user-view works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+      <div class="card my-5">
+        <div class="card-body text-center" >
+          <h5 class="card-title text-center">Connexion</h5>
+          <div *ngIf="errMessage" class="alert alert-danger">{{errMessage}}</div>
+
+          <form  (ngSubmit)="onSubmitAddUser()" [formGroup]="addForm">
+
+            <div class="form-group">
+              <label for="firstName">Votre prénom</label>
+              <input type="text" class="text-center form-control" formControlName="firstName" autofocus>
+            </div>
+
+
+            <div class="form-group">
+             <label for="lastName">Votre nom</label>
+             <input type="text" class="text-center form-control" formControlName="lastName" autofocus>
+           </div>
+
+           <div class="form-group">
+            <label for="email">Votre email</label>
+            <input type="email" class="text-center form-control" formControlName="email" autofocus>
+          </div>
+
+
+            <button class="btn btn-lg btn-dark btn-block text-uppercase" [disabled]="addForm.invalid">Ajouter un utilisateur</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
